--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -43,3 +43,132 @@
 <script src="script.js"></script>
 </body>
 </html>
+<style>* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: 'Segoe UI', sans-serif;
+  background: radial-gradient(circle at top, #0f2027, #000);
+  color: white;
+  overflow-x: hidden;
+}
+
+/* Header */
+header {
+  text-align: center;
+  padding: 30px;
+}
+
+header h1 {
+  font-size: 32px;
+  text-shadow: 0 0 20px #00eaff;
+}
+
+/* Grid */
+.apps-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 40px;
+  padding: 40px;
+  perspective: 1500px;
+}
+
+/* Card */
+.card {
+  position: relative;
+  height: 360px;
+  animation: float 6s ease-in-out infinite;
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: blur(15px);
+  border-radius: 25px;
+  padding: 25px;
+  text-align: center;
+  transform-style: preserve-3d;
+  transition: transform 0.15s ease, box-shadow 0.15s;
+  box-shadow: 0 30px 80px rgba(0,0,0,0.7);
+}
+
+/* Floating */
+@keyframes float {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
+}
+
+/* Pop Elements */
+.card-inner img {
+  width: 110px;
+  transform: translateZ(70px);
+}
+
+.card-inner h3 {
+  transform: translateZ(60px);
+}
+
+.card-inner p,
+.card-inner a,
+.badge {
+  transform: translateZ(40px);
+}
+
+/* Neon Glow */
+.card-inner::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 25px;
+  box-shadow: 0 0 40px #00eaff;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.card-inner:hover::after {
+  opacity: 1;
+}
+
+/* Button */
+.card-inner a {
+  display: inline-block;
+  margin-top: 12px;
+  padding: 10px 25px;
+  background: linear-gradient(45deg, #00eaff, #00ff88);
+  color: black;
+  border-radius: 25px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* Badges */
+.badge {
+  display: inline-block;
+  padding: 5px 12px;
+  border-radius: 20px;
+  font-size: 12px;
+  margin: 8px 0;
+}
+
+.mod { background: red; }
+.normal { background: limegreen; }</style><script>document.querySelectorAll(".card").forEach(card => {
+  const inner = card.querySelector(".card-inner");
+
+  card.addEventListener("mousemove", e => {
+    const rect = card.getBoundingClientRect();
+    const x = e.clientX - rect.left - rect.width / 2;
+    const y = e.clientY - rect.top - rect.height / 2;
+
+    inner.style.transform =
+      `rotateY(${x / 20}deg) rotateX(${-y / 20}deg) scale(1.05)`;
+  });
+
+  card.addEventListener("mouseleave", () => {
+    inner.style.transform = "rotateY(0) rotateX(0) scale(1)";
+  });
+});</script>
