--- a/index.html
+++ b/index.html
@@ -20,23 +20,15 @@
 
   <div class="card">
     <div class="card-inner">
-      <img src="https://via.placeholder.com/120">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbsde7xfButJAOQ6_-JqTINTQ8KDABJ9w9aSudhzPhAw&s=10">
       <h3>CapCut Pro</h3>
       <span class="badge mod">MOD</span>
       <p>Video Editing</p>
-      <a href="#">Download</a>
+      <a href="ccm.html">GET APP</a>
     </div>
   </div>
 
-  <div class="card">
-    <div class="card-inner">
-      <img src="https://via.placeholder.com/120">
-      <h3>Free Fire</h3>
-      <span class="badge normal">NORMAL</span>
-      <p>Action Game</p>
-      <a href="#">Download</a>
-    </div>
-  </div>
+
 
 </div>
 
