Fix marquee header text to include 'web by'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Next-Gen App Store Experience</p>
 </header>
 <marquee behavior="scroll" direction="left">
-<h1>  SHARAZ KHAN<h1>
+<h1>web by  SHARAZ KHAN<h1>
 </marquee>
 
 <div class="apps-container">
