Add class to 'GET APP' link in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>CapCut Pro</h3>
       <span class="badge mod">MOD</span>
       <p>Video Editing</p>
-      <a href="ccm.html">GET APP</a>
+      <a href="ccm.html" class="getapp">GET APP</a>
     </div>
   </div>
 
