--- a/index.html
+++ b/index.html
@@ -16,87 +16,78 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background: radial-gradient(circle at top, #0f2027, #000);
   color: white;
-  overflow-x: hidden;
 }
 
 /* Header */
 header {
   text-align: center;
-  padding: 30px;
+  padding: 20px;
 }
 
 header h1 {
-  font-size: 32px;
-  text-shadow: 0 0 20px #00eaff;
+  font-size: 26px;
+  text-shadow: 0 0 15px #00eaff;
 }
 
 /* Marquee */
-marquee h1{
-  font-size:18px;
-  color:#00eaff;
+marquee h1 {
+  font-size: 16px;
+  color: #00eaff;
 }
 
-/* Grid */
+/* Grid – 2 cards in one row */
 .apps-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 40px;
-  padding: 40px;
-  perspective: 1500px;
+  grid-template-columns: repeat(2, 1fr); /* 🔥 2 cards */
+  gap: 20px;
+  padding: 20px;
 }
 
 /* Card */
 .card {
-  position: relative;
-  height: 360px;
-  animation: float 6s ease-in-out infinite;
+  height: 300px; /* 🔥 size reduced */
 }
 
+/* Card inner */
 .card-inner {
   width: 100%;
   height: 100%;
-  background: rgba(255,255,255,0.1);
-  backdrop-filter: blur(15px);
-  border-radius: 25px;
-  padding: 25px;
+  background: rgba(255,255,255,0.12);
+  backdrop-filter: blur(12px);
+  border-radius: 20px;
+  padding: 15px;
   text-align: center;
-  transform-style: preserve-3d;
-  transition: transform 0.15s ease, box-shadow 0.15s;
-  box-shadow: 0 30px 80px rgba(0,0,0,0.7);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.6);
   position: relative;
 }
 
-/* Floating */
-@keyframes float {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-20px); }
-  100% { transform: translateY(0); }
-}
-
-/* Pop Elements */
+/* Image */
 .card-inner img {
-  width: 110px;
-  transform: translateZ(70px);
+  width: 90px;
+  margin-top: 10px;
 }
 
+/* Text */
 .card-inner h3 {
-  transform: translateZ(60px);
+  margin: 10px 0 5px;
+  font-size: 16px;
 }
 
 .card-inner p {
-  transform: translateZ(50px);
+  font-size: 13px;
+  opacity: 0.9;
 }
 
-/* Neon Glow FIXED */
+/* Glow (no motion) */
 .card-inner::after {
   content: "";
   position: absolute;
   inset: 0;
-  border-radius: 25px;
-  box-shadow: 0 0 40px #00eaff;
+  border-radius: 20px;
+  box-shadow: 0 0 25px #00eaff;
   opacity: 0;
   transition: 0.3s;
-  pointer-events: none; /* 🔥 CLICK FIX */
+  pointer-events: none;
 }
 
 .card-inner:hover::after {
@@ -106,33 +97,32 @@ marquee h1{
 /* Button */
 .getapp {
   display: inline-block;
-  margin-top: 15px;
-  padding: 10px 25px;
+  margin-top: 12px;
+  padding: 8px 18px;
   background: linear-gradient(45deg, #00eaff, #00ff88);
   color: black;
-  border-radius: 25px;
+  border-radius: 20px;
   text-decoration: none;
+  font-size: 13px;
   font-weight: bold;
-  position: relative;
-  z-index: 5; /* 🔥 CLICK FIX */
 }
 
-/* Badges */
+/* Badge */
 .badge {
   display: inline-block;
-  padding: 5px 12px;
-  border-radius: 20px;
-  font-size: 12px;
-  margin: 8px 0;
-  transform: translateZ(55px);
+  padding: 4px 10px;
+  border-radius: 15px;
+  font-size: 11px;
+  margin: 6px 0;
 }
 
 .mod { background: red; }
-.normal { background: limegreen; }
 
-/* Mobile */
-@media(max-width:600px){
-  header h1{font-size:24px;}
+/* Desktop view – 4 cards */
+@media(min-width:900px){
+  .apps-container{
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 </style>
 </head>
@@ -140,11 +130,11 @@ marquee h1{
 <body>
 
 <header>
-  <h1>🚀 SK ULTRA 3D APPS</h1>
+  <h1>🚀 SK PREMIUM APPS</h1>
   <p>Next-Gen App Store Experience</p>
 </header>
 
-<marquee behavior="scroll" direction="left">
+<marquee>
   <h1>WEB BY SHARAZ KHAN</h1>
 </marquee>
 
@@ -160,26 +150,17 @@ marquee h1{
     </div>
   </div>
 
+  <div class="card">
+    <div class="card-inner">
+      <img src="https://i.imgur.com/Z6Z6Z6Z.png">
+      <h3>Alight Motion</h3>
+      <span class="badge mod">MOD</span>
+      <p>Motion Graphics</p>
+      <a href="#" class="getapp">GET APP</a>
+    </div>
+  </div>
+
 </div>
-
-<script>
-document.querySelectorAll(".card").forEach(card => {
-  const inner = card.querySelector(".card-inner");
-
-  card.addEventListener("mousemove", e => {
-    const rect = card.getBoundingClientRect();
-    const x = e.clientX - rect.left - rect.width / 2;
-    const y = e.clientY - rect.top - rect.height / 2;
-
-    inner.style.transform =
-      `rotateY(${x / 20}deg) rotateX(${-y / 20}deg) scale(1.05)`;
-  });
-
-  card.addEventListener("mouseleave", () => {
-    inner.style.transform = "rotateY(0) rotateX(0) scale(1)";
-  });
-});
-</script>
 
 </body>
 </html>
