Update card content for Netflix promotion

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ marquee h1 {
 
   <div class="card">
     <div class="card-inner">
-      <img src="https://i.imgur.com/Z6Z6Z6Z.png">
-      <h3>Alight Motion</h3>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIj6MiL-oH2PZZ3HJ67fKXzwi0L3eu6wgsYs_d8HsZSQ&s">
+      <h3>NETFLIX premium unlocked</h3>
       <span class="badge mod">MOD</span>
-      <p>Motion Graphics</p>
-      <a href="#" class="getapp">GET APP</a>
+      <p>WATCH MOVIES,SERIES</p>
+      <a href="ntfx.html" class="getapp">GET APP</a>
     </div>
   </div>
 
