Update Netflix heading in index.html

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ marquee h1 {
   <div class="card">
     <div class="card-inner">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIj6MiL-oH2PZZ3HJ67fKXzwi0L3eu6wgsYs_d8HsZSQ&s">
-      <h3>NETFLIX premium unlocked</h3>
+      <h3>NETFLIX premium</h3>
       <span class="badge mod">MOD</span>
       <p>WATCH MOVIES,SERIES</p>
       <a href="ntfx.html" class="getapp">GET APP</a>
