--- a/index.html
+++ b/index.html
@@ -139,7 +139,15 @@ marquee h1 {
 </marquee>
 
 <div class="apps-container">
-
+  <div class="card">
+    <div class="card-inner">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG-bt4b-6DfNJ7u91ejVBn0M3MaqXOGan5kzlP7hhrNA&s=10">
+      <h3>Wink Pro</h3>
+      <span class="badge mod">MOD</span>
+      <p>Video Editing</p>
+      <a href="wink.html" class="getapp">GET APP</a>
+    </div>
+                      </div>
   <div class="card">
     <div class="card-inner">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbsde7xfButJAOQ6_-JqTINTQ8KDABJ9w9aSudhzPhAw&s=10">
